@@ -1,6 +1,12 @@
 Open Vehicle Monitor System v3 - Change log
 
 ????-??-?? ???  ???????  OTA release
+- Module: added heap integrity check + alert command for usage in e.g. custom event scripts,
+    enables adding checks on specific system events and/or with higher frequency.
+    Example: perform heap integrity check when the server V2 gets stopped:
+      vfs echo "module check alert" /store/events/server.v2.stopped/90-checkheap
+  Command extension:
+    module check alert                    -- Check for and send one-off alert on heap corruption
 - VFS: added echo command to write a line to a file
   New commands:
     vfs echo <line> <file>                -- Write <line> to <file>, creating/replacing the file
